Fixed spacing

--- a/iron/src/styles.scss
+++ b/iron/src/styles.scss
@@ -253,10 +253,6 @@ html {
       0 12.5px 10px rgba(0, 0, 0, 0.06),
   }
 
-  .row {
-    --bs-gutter-x: var(--blu-space-s);
-    --bs-gutter-y: var(--blu-space-s);
-  }
   input::-webkit-outer-spin-button,
   input::-webkit-inner-spin-button {
       -webkit-appearance: none;
